#pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-ledger-system"
version = "0.1.0"
description = "A shared ledger system for a monorepo with multiple apps."
authors = [{ name = "Davut Aktas", email = "davut@davutaktas.online" }]
dependencies = [
    "fastapi>=0.78.0",
    "uvicorn[standard]",
    "SQLAlchemy>=2.0.0",
    "pydantic",
    "alembic",
    "asyncpg",
    "prometheus-client>=0.20.0", 
    "python-jose[cryptography]>=3.3.0", 
    "passlib", 
    "python-dotenv"
]

[tool.black]
line-length = 88
target-version = ['py311']
